# jp-api

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  docker-compose-db.yaml  docker-compose-prod.yaml  docker-compose.yaml  env.py  environment.yml  flake.nix  init.py  main.py  pyproject.toml  requirements.txt  shell.nix
.github/workflows/: builds.yml  docker-build-prod.yml  docker-build-stage.yml  prod.yml  stage.yml
data/raw/: fyearly_h.csv  hts_4_cats.xlsx  monthly_h.csv  price_indexes.xlsx  quarterly_h.csv  yearly_h.csv
notebooks/: diagram.qmd  jp_imports.ipynb  jp_imports.qmd  request.qmd  requests2.py
src/: main.py
src/routers/: data.py  files.py  graphs.py
