[project]
name = "jp-api"
authors = [{ name = "Alejandro Ousland", email = "alejandro.ouslan@upr.edu" }]
version = "1.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115.5",
  "pandas>=2.2.3",
  "polars>=1.16.0",
  "python-dotenv>=1.0.1",
  "tqdm>=4.67.1",
  "requests>=2.32.3",
  "fastexcel>=0.12.1",
  "sqlmodel>=0.0.22",
  "numpy>=2.2.2",
  "duckdb>=1.2.0",
  "geopandas>=1.0.1",
  "altair[all]>=5.5.0",
  "comtradeapicall>=1.2.1",
]

[dependency-groups]
dev = ["jupyter>=1.1.1", "pre-commit>=4.2.0", "pynvim>=0.5.2"]
